--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ div{
     background-color: cornsilk;
     display: inline-block;
     padding: 3px;
+    margin: 5px;
 }
 
 .pic{
@@ -24,4 +25,15 @@ div{
     background-color: cornsilk;
     padding: 3px;
     display: inline-block;
+}
+
+.div2{
+    height: 100%;
+    text-align: center;
+    margin-top: 5px;
+}
+
+.div3{
+    width: 100%;
+    height: 100%;
 }
